# otus_8

./: CMakeLists.txt  README.md  basehash.h  identical.cpp  identical.h  main.cpp  options.h
.github/workflows/: release.yml
